correcting all the scripts and fix bugs introduced

--- a/notebook/fit_density.ipynb
+++ b/notebook/fit_density.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "20918b42-d892-4a93-b661-aedba8881b7b",
    "metadata": {
     "tags": []
@@ -109,7 +109,7 @@
    "outputs": [],
    "source": [
     "grid = pd.read_parquet(data_path / \"data_density.parquet\")\n",
-    "grid_window = pd.read_parquet(data_path / \"grid_window_m.parquet\")\n",
+    "grid_window = pd.read_parquet(data_path / \"data_window_density.parquet\")\n",
     "\n",
     "DataDensity = data_vector.Dens(grid.rename(columns={'density_err': 'density_error', 'rcom': 'rcom_zobs'}).to_dict(orient='list'))\n",
     "\n",
