--- a/notebook/fit_joint.ipynb
+++ b/notebook/fit_joint.ipynb
@@ -118,10 +118,10 @@
             "source": [
                 "# Density data\n",
                 "grid = pd.read_parquet(data_path / \"data_density.parquet\")\n",
-                "grid_window = pd.read_parquet(data_path / \"grid_window_m.parquet\")\n",
-                "coordinates_density = np.array([grid[\"ra\"], grid[\"dec\"], grid[\"rcom\"]])\n",
+                "grid_window = pd.read_parquet(data_path / \"data_window_density.parquet\")\n",
+                "coordinates_density = np.array([grid[\"ra\"], grid[\"dec\"], grid[\"rcom_zobs\"]])\n",
                 "data_density = {'density': np.array(grid[\"density\"]), \n",
-                "                'density_error': np.array(grid[\"density_err\"])}\n",
+                "                'density_error': np.array(grid[\"density_error\"])}\n",
                 "\n",
                 "DataDensity = data_vector.Dens(grid.rename(columns={'density_err': 'density_error', 'rcom': 'rcom_zobs'}).to_dict(orient='list'))\n",
                 "\n",
