fix all notebooks

--- a/notebook/fisher_velocity.ipynb
+++ b/notebook/fisher_velocity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "d21543d2-97cb-474c-840e-3bb188a11af2",
+   "id": "f59d21f0-a694-496e-8c15-ef918812ab07",
    "metadata": {},
    "source": [
     "This is a tutorial to use the flip package: https://github.com/corentinravoux/flip \\\n",
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0f1dd41d-e8fb-402f-8df5-f22b093a8988",
+   "id": "134358cb-f6c5-48ac-9e4f-75f534d7088c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,51 +33,70 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "from pathlib import Path\n",
     "from flip import utils, data_vector, __flip_dir_path__\n",
-    "from flip.covariance import covariance, fisher\n",
-    "\n",
+    "from flip.covariance import covariance, contraction, plot_utils, fisher\n",
     "\n",
     "flip_base = Path(__flip_dir_path__)\n",
-    "data_path = flip_base / 'data'"
+    "data_path = flip_base / \"data\"\n",
+    "plt.style.use(data_path / \"style.mplstyle\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "387ba8d3-a9cc-4d2e-9a80-03043a82783b",
-   "metadata": {
-    "tags": []
-   },
+   "id": "1ade29fc-67fa-4fa1-bded-ef39810eeb36",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "grid = pd.read_parquet(data_path / \"data_density.parquet\")\n",
-    "grid_window = pd.read_parquet(data_path / \"data_window_density.parquet\")\n",
+    "data_velocity = pd.read_parquet(data_path / \"data_velocity.parquet\")\n",
     "\n",
-    "coordinates_density = np.array([grid[\"ra\"], grid[\"dec\"], grid[\"rcom_zobs\"]])\n",
+    "coordinates_velocity = np.array([data_velocity[\"ra\"], data_velocity[\"dec\"], data_velocity[\"rcom_zobs\"]])\n",
     "\n",
-    "DataDensity = data_vector.Dens(grid.to_dict(orient='list'))\n",
+    "data_velocity_true = {**data_velocity.to_dict(orient='list'), \n",
+    "                      \"velocity_error\": np.zeros(len(data_velocity[\"velocity\"].values))}\n",
+    "\n",
+    "\n",
+    "# Create the data Vector\n",
+    "DataTrueVel = data_vector.DirectVel(data_velocity_true)\n",
     "\n",
     "ktt, ptt = np.loadtxt(data_path / \"power_spectrum_tt.txt\")\n",
     "kmt, pmt = np.loadtxt(data_path / \"power_spectrum_mt.txt\")\n",
     "kmm, pmm = np.loadtxt(data_path / \"power_spectrum_mm.txt\")\n",
     "\n",
-    "sigmag_fiducial = 6.0\n",
+    "sigmau_fiducial = 15\n",
     "\n",
-    "power_spectrum_dict_bias = {\"gg\": [[kmm, pmm * np.array(grid_window[\"window_mm\"])**2]]}\n",
-    "power_spectrum_dict = {\"gg\": [[kmm, pmm * np.array(grid_window[\"window_mm\"])**2],\n",
-    "                              [kmt, pmt * np.array(grid_window[\"window_mt\"])],\n",
-    "                              [ktt, ptt]]}\n"
+    "power_spectrum_dict = {\"vv\": [[ktt, ptt * utils.Du(ktt, sigmau_fiducial) ** 2]]}\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ca83b99e-eec2-4469-ae55-d70fc508218e",
+   "id": "91f7e242-97d8-44bb-b136-2501d8e1e0eb",
    "metadata": {
     "tags": []
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data free parameters:  ['sigma_M']\n"
+     ]
+    }
+   ],
+   "source": [
+    "DataVel = data_vector.VelFromIntrinsicScatter(data_velocity.to_dict(orient='list'))\n",
+    "print(\"Data free parameters: \", DataVel.free_par)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e5c4a362-5d79-4e54-a05e-79b380e7a68f",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -85,37 +104,44 @@
      "text": [
       "/global/common/software/nersc/pe/conda-envs/24.1.0/python-3.11/nersc-python/lib/python3.11/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
       "  self.pid = os.fork()\n",
-      "[ 000009.61 ]: 01-23 02:38  root            INFO     Covariance matrix generated from flip with ravouxcarreres model in 4.73e+00 seconds\n"
+      "[ 000007.32 ]: 01-23 03:31  root            INFO     Covariance matrix generated from flip with carreres23 model in 5.93e-01 seconds\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Covariance free parameters:  ['fs8', 'bs8']\n"
+      "Covariance free parameters:  ['sigv', 'fs8']\n"
      ]
     }
    ],
    "source": [
-    "size_batch=500_000\n",
-    "number_worker=8\n",
+    "ktt, ptt = np.loadtxt(data_path / \"power_spectrum_tt.txt\")\n",
+    "kmt, pmt = np.loadtxt(data_path / \"power_spectrum_mt.txt\")\n",
+    "kmm, pmm = np.loadtxt(data_path / \"power_spectrum_mm.txt\")\n",
+    "sigmau_fiducial = 15\n",
+    "\n",
+    "power_spectrum_dict = {\"vv\": [[ktt, ptt * utils.Du(ktt, sigmau_fiducial) ** 2]]}\n",
+    "\n",
+    "### Compute covariance\n",
+    "size_batch = 10_000\n",
+    "number_worker = 16\n",
+    "\n",
     "covariance_fisher = covariance.CovMatrix.init_from_flip(\n",
-    "    \"ravouxcarreres\",\n",
-    "    \"density\",\n",
+    "    \"carreres23\",\n",
+    "    \"velocity\",\n",
     "    power_spectrum_dict,\n",
-    "    coordinates_density=coordinates_density,\n",
+    "    coordinates_velocity=coordinates_velocity,\n",
     "    size_batch=size_batch,\n",
     "    number_worker=number_worker,\n",
-    "    additional_parameters_values=(sigmag_fiducial,),\n",
-    "    variant=\"nobeta\",\n",
     ")\n",
     "\n",
-    "print(\"Covariance free parameters: \", covariance_fisher.free_par)"
+    "print(\"Covariance free parameters: \", covariance_fisher.free_par)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "56cffe25-d883-450d-b777-b52dbcace973",
    "metadata": {
     "tags": []
@@ -129,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "10cd0f36-0c81-4230-937a-3813e7a63813",
    "metadata": {
     "tags": []
@@ -137,13 +163,15 @@
    "outputs": [],
    "source": [
     "parameter_dict = {\n",
-    "    \"bs8\": 0.8,\n",
-    "    \"fs8\": 0.4,\n",
+    "    \"fs8\": 0.55,\n",
+    "    \"sigv\": 200,\n",
+    "    \"sigma_M\": 0.12\n",
     "}\n",
+    "\n",
     "\n",
     "Fisher = fisher.FisherMatrix.init_from_covariance(\n",
     "    covariance_fisher,\n",
-    "    DataDensity,\n",
+    "    DataVel,\n",
     "    parameter_dict,\n",
     "    fisher_properties=fisher_properties,\n",
     ")\n",
@@ -155,8 +183,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "b957fa92-0217-4012-847b-fee9105bb717",
+   "execution_count": 8,
+   "id": "df04ade7-7115-4435-a8ea-c80df6f86f9d",
    "metadata": {
     "tags": []
    },
@@ -165,8 +193,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fisher error on fs8 = 0.1337\n",
-      "Fisher error on bs8 = 0.0804\n"
+      "Fisher error on fs8 = 0.0960\n"
      ]
     }
    ],
@@ -178,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "190f711d-92f6-42c7-8d59-25c75f22b96d",
+   "id": "1ec6c23e-45ba-4272-ae70-e1dbcf28a12d",
    "metadata": {},
    "outputs": [],
    "source": []
