--- a/notebook/fit_joint.ipynb
+++ b/notebook/fit_joint.ipynb
@@ -127,7 +127,9 @@
      "text": [
       "/global/common/software/nersc/pe/conda-envs/24.1.0/python-3.11/nersc-python/lib/python3.11/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
       "  self.pid = os.fork()\n",
-      "[ 000016.29 ]: 01-08 09:12  root            INFO     Covariance matrix generated from flip with ravouxcarreres model in 5.96e+00 seconds\n"
+      "/global/common/software/nersc/pe/conda-envs/24.1.0/python-3.11/nersc-python/lib/python3.11/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
+      "  self.pid = os.fork()\n",
+      "[ 000041.02 ]: 01-19 02:56  root            INFO     Covariance matrix generated from flip with ravouxcarreres model in 6.76e+00 seconds\n"
      ]
     }
    ],
@@ -160,18 +162,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Free parameters are: ['sigv', 'bs8', 'fs8']\n"
+      "Free parameters are: ['bs8', 'sigv', 'fs8']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ 000018.01 ]: 01-08 09:12  root            INFO     ┌─────────────────────────────────────────────────────────────────────────┐\n",
+      "[ 000043.50 ]: 01-19 02:56  root            INFO     ┌─────────────────────────────────────────────────────────────────────────┐\n",
       "│                                Migrad                                   │\n",
       "├──────────────────────────────────┬──────────────────────────────────────┤\n",
       "│ FCN = 4160                       │              Nfcn = 123              │\n",
-      "│ EDM = 1.58e-06 (Goal: 0.0001)    │            time = 1.7 sec            │\n",
+      "│ EDM = 1.58e-06 (Goal: 0.0001)    │            time = 2.4 sec            │\n",
       "├──────────────────────────────────┼──────────────────────────────────────┤\n",
       "│          Valid Minimum           │   Below EDM threshold (goal x 10)    │\n",
       "├──────────────────────────────────┼──────────────────────────────────────┤\n",
@@ -261,7 +263,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ 000024.24 ]: 01-08 09:12  root            INFO     Covariance matrix generated from flip with ravouxcarreres model in 6.22e+00 seconds\n"
+      "[ 000050.52 ]: 01-19 02:56  root            INFO     Covariance matrix generated from flip with ravouxcarreres model in 7.01e+00 seconds\n"
      ]
     }
    ],
@@ -302,18 +304,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Free parameters are: ['alpha', 'beta', 'M_0', 'sigma_M', 'sigv', 'bs8', 'fs8']\n"
+      "Free parameters are: ['alpha', 'beta', 'M_0', 'sigma_M', 'bs8', 'sigv', 'fs8']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ 000032.00 ]: 01-08 09:12  root            INFO     ┌─────────────────────────────────────────────────────────────────────────┐\n",
+      "[ 000061.06 ]: 01-19 02:56  root            INFO     ┌─────────────────────────────────────────────────────────────────────────┐\n",
       "│                                Migrad                                   │\n",
       "├──────────────────────────────────┬──────────────────────────────────────┤\n",
       "│ FCN = 4466                       │              Nfcn = 313              │\n",
-      "│ EDM = 8.45e-06 (Goal: 0.0001)    │            time = 7.7 sec            │\n",
+      "│ EDM = 8.45e-06 (Goal: 0.0001)    │           time = 10.5 sec            │\n",
       "├──────────────────────────────────┼──────────────────────────────────────┤\n",
       "│          Valid Minimum           │   Below EDM threshold (goal x 10)    │\n",
       "├──────────────────────────────────┼──────────────────────────────────────┤\n",
