--- a/notebook/fit_velocity.ipynb
+++ b/notebook/fit_velocity.ipynb
@@ -352,7 +352,7 @@
      "text": [
       "/global/common/software/nersc/pe/conda-envs/24.1.0/python-3.11/nersc-python/lib/python3.11/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
       "  self.pid = os.fork()\n",
-      "[ 000020.52 ]: 01-08 09:12  root            INFO     Covariance matrix generated from flip with carreres23 model in 8.32e-01 seconds\n"
+      "[ 000033.29 ]: 01-19 02:57  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.06e+00 seconds\n"
      ]
     }
    ],
@@ -390,18 +390,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Free parameters are: ['fs8', 'sigv']\n"
+      "Free parameters are: ['sigv', 'fs8']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ 000021.84 ]: 01-08 09:12  root            INFO     ┌─────────────────────────────────────────────────────────────────────────┐\n",
+      "[ 000034.82 ]: 01-19 02:57  root            INFO     ┌─────────────────────────────────────────────────────────────────────────┐\n",
       "│                                Migrad                                   │\n",
       "├──────────────────────────────────┬──────────────────────────────────────┤\n",
       "│ FCN = 3778                       │              Nfcn = 56               │\n",
-      "│ EDM = 3.98e-05 (Goal: 0.0001)    │            time = 1.3 sec            │\n",
+      "│ EDM = 3.98e-05 (Goal: 0.0001)    │            time = 1.5 sec            │\n",
       "├──────────────────────────────────┼──────────────────────────────────────┤\n",
       "│          Valid Minimum           │   Below EDM threshold (goal x 10)    │\n",
       "├──────────────────────────────────┼──────────────────────────────────────┤\n",
@@ -495,16 +495,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ 000022.79 ]: 01-08 09:12  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.39e-01 seconds\n",
-      "[ 000023.85 ]: 01-08 09:12  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.05e+00 seconds\n",
-      "[ 000024.90 ]: 01-08 09:12  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.04e+00 seconds\n",
-      "[ 000026.03 ]: 01-08 09:12  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.12e+00 seconds\n",
-      "[ 000027.15 ]: 01-08 09:12  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.10e+00 seconds\n",
-      "[ 000028.12 ]: 01-08 09:12  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.59e-01 seconds\n",
-      "[ 000029.12 ]: 01-08 09:12  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.85e-01 seconds\n",
-      "[ 000030.11 ]: 01-08 09:12  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.86e-01 seconds\n",
-      "[ 000031.11 ]: 01-08 09:12  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.85e-01 seconds\n",
-      "[ 000032.11 ]: 01-08 09:12  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.95e-01 seconds\n"
+      "[ 000035.81 ]: 01-19 02:57  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.80e-01 seconds\n",
+      "[ 000036.81 ]: 01-19 02:57  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.86e-01 seconds\n",
+      "[ 000037.89 ]: 01-19 02:57  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.07e+00 seconds\n",
+      "[ 000038.97 ]: 01-19 02:57  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.06e+00 seconds\n",
+      "[ 000040.00 ]: 01-19 02:57  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.02e+00 seconds\n",
+      "[ 000040.98 ]: 01-19 02:57  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.68e-01 seconds\n",
+      "[ 000041.99 ]: 01-19 02:57  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.00e+00 seconds\n",
+      "[ 000043.06 ]: 01-19 02:57  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.06e+00 seconds\n",
+      "[ 000044.09 ]: 01-19 02:57  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.02e+00 seconds\n",
+      "[ 000045.16 ]: 01-19 02:57  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.06e+00 seconds\n"
      ]
     }
    ],
@@ -543,18 +543,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Free parameters: ['sigu', 'fs8', 'sigv']\n"
+      "Free parameters: ['sigu', 'sigv', 'fs8']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ 000034.67 ]: 01-08 09:12  root            INFO     ┌─────────────────────────────────────────────────────────────────────────┐\n",
+      "[ 000048.22 ]: 01-19 02:57  root            INFO     ┌─────────────────────────────────────────────────────────────────────────┐\n",
       "│                                Migrad                                   │\n",
       "├──────────────────────────────────┬──────────────────────────────────────┤\n",
       "│ FCN = 3780                       │              Nfcn = 99               │\n",
-      "│ EDM = 2.94e-06 (Goal: 0.0001)    │            time = 2.5 sec            │\n",
+      "│ EDM = 2.94e-06 (Goal: 0.0001)    │            time = 3.0 sec            │\n",
       "├──────────────────────────────────┼──────────────────────────────────────┤\n",
       "│          Valid Minimum           │   Below EDM threshold (goal x 10)    │\n",
       "├──────────────────────────────────┼──────────────────────────────────────┤\n",
@@ -654,7 +654,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ 000035.54 ]: 01-08 09:12  root            INFO     Covariance matrix generated from flip with carreres23 model in 8.59e-01 seconds\n"
+      "[ 000049.21 ]: 01-19 02:57  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.87e-01 seconds\n"
      ]
     }
    ],
@@ -692,18 +692,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Free parameters: ['alpha', 'beta', 'M_0', 'sigma_M', 'fs8', 'sigv']\n"
+      "Free parameters: ['alpha', 'beta', 'M_0', 'sigma_M', 'sigv', 'fs8']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ 000037.56 ]: 01-08 09:12  root            INFO     ┌─────────────────────────────────────────────────────────────────────────┐\n",
+      "[ 000051.76 ]: 01-19 02:57  root            INFO     ┌─────────────────────────────────────────────────────────────────────────┐\n",
       "│                                Migrad                                   │\n",
       "├──────────────────────────────────┬──────────────────────────────────────┤\n",
       "│ FCN = 4087                       │              Nfcn = 327              │\n",
-      "│ EDM = 2.64e-05 (Goal: 0.0001)    │            time = 2.0 sec            │\n",
+      "│ EDM = 2.64e-05 (Goal: 0.0001)    │            time = 2.5 sec            │\n",
       "├──────────────────────────────────┼──────────────────────────────────────┤\n",
       "│          Valid Minimum           │   Below EDM threshold (goal x 10)    │\n",
       "├──────────────────────────────────┼──────────────────────────────────────┤\n",
@@ -938,7 +938,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ 000039.92 ]: 01-08 09:12  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.82e-01 seconds\n"
+      "[ 000054.37 ]: 01-19 02:57  root            INFO     Covariance matrix generated from flip with carreres23 model in 1.05e+00 seconds\n"
      ]
     }
    ],
@@ -976,8 +976,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3.67 s, sys: 174 ms, total: 3.85 s\n",
-      "Wall time: 1.34 s\n"
+      "CPU times: user 4.23 s, sys: 288 ms, total: 4.52 s\n",
+      "Wall time: 1.62 s\n"
      ]
     }
    ],
