fix one notebook

--- a/notebook/fit_velocity-emulator.ipynb
+++ b/notebook/fit_velocity-emulator.ipynb
@@ -60,22 +60,14 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_460407/2175734724.py:4: UserWarning: DataFrame columns are not unique, some columns will be omitted.\n",
-      "  data_velocity_true = {**data_velocity.rename(columns={'vpec': 'velocity'}).to_dict(orient='list'),\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_velocity = pd.read_parquet(data_path / \"data_velocity.parquet\")\n",
     "\n",
+    "coordinates_velocity = np.array([data_velocity[\"ra\"], data_velocity[\"dec\"], data_velocity[\"rcom_zobs\"]])\n",
     "\n",
-    "data_velocity_true = {**data_velocity.rename(columns={'vpec': 'velocity'}).to_dict(orient='list'), \n",
-    "                      \"velocity_error\": np.zeros(len(data_velocity[\"vpec\"].values))}\n",
+    "data_velocity_true = {**data_velocity.to_dict(orient='list'), \n",
+    "                      \"velocity_error\": np.zeros(len(data_velocity[\"velocity\"].values))}\n",
     "\n",
     "\n",
     "# Create the data Vector\n",
@@ -121,26 +113,26 @@
      "text": [
       "/global/common/software/nersc/pe/conda-envs/24.1.0/python-3.11/nersc-python/lib/python3.11/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
       "  self.pid = os.fork()\n",
-      "[ 000005.84 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 7.60e-01 seconds\n",
-      "[ 000006.78 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.11e-01 seconds\n",
-      "[ 000007.69 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.04e-01 seconds\n",
-      "[ 000008.58 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 8.80e-01 seconds\n",
-      "[ 000009.42 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 8.24e-01 seconds\n",
-      "[ 000010.26 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 8.24e-01 seconds\n",
-      "[ 000011.13 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 8.57e-01 seconds\n",
-      "[ 000012.02 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 8.72e-01 seconds\n",
-      "[ 000012.93 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 8.96e-01 seconds\n",
-      "[ 000013.88 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.38e-01 seconds\n",
-      "[ 000014.87 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.76e-01 seconds\n",
-      "[ 000015.71 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 8.29e-01 seconds\n",
-      "[ 000016.65 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.35e-01 seconds\n",
-      "[ 000017.55 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 8.85e-01 seconds\n",
-      "[ 000018.47 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.11e-01 seconds\n",
-      "[ 000019.41 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.27e-01 seconds\n",
-      "[ 000020.36 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.44e-01 seconds\n",
-      "[ 000021.25 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 8.78e-01 seconds\n",
-      "[ 000022.25 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.92e-01 seconds\n",
-      "[ 000023.10 ]: 01-19 03:04  root            INFO     Covariance matrix generated from flip with carreres23 model in 8.35e-01 seconds\n"
+      "[ 000004.23 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 6.07e-01 seconds\n",
+      "[ 000005.02 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 7.67e-01 seconds\n",
+      "[ 000005.81 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 7.79e-01 seconds\n",
+      "[ 000006.62 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 7.92e-01 seconds\n",
+      "[ 000007.53 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 9.05e-01 seconds\n",
+      "[ 000008.40 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 8.55e-01 seconds\n",
+      "[ 000009.19 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 7.78e-01 seconds\n",
+      "[ 000009.92 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 7.25e-01 seconds\n",
+      "[ 000010.65 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 7.17e-01 seconds\n",
+      "[ 000011.42 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 7.57e-01 seconds\n",
+      "[ 000012.18 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 7.54e-01 seconds\n",
+      "[ 000013.05 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 8.59e-01 seconds\n",
+      "[ 000013.92 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 8.58e-01 seconds\n",
+      "[ 000014.74 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 8.11e-01 seconds\n",
+      "[ 000015.51 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 7.62e-01 seconds\n",
+      "[ 000016.30 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 7.83e-01 seconds\n",
+      "[ 000017.02 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 7.04e-01 seconds\n",
+      "[ 000017.72 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 6.90e-01 seconds\n",
+      "[ 000018.55 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 8.20e-01 seconds\n",
+      "[ 000019.45 ]: 01-23 03:36  root            INFO     Covariance matrix generated from flip with carreres23 model in 8.91e-01 seconds\n"
      ]
     }
    ],
@@ -156,11 +148,13 @@
     "    power_spectrum_dict = {\"vv\": [[ktt, ptt* utils.Du(ktt, sigu)**2]]}\n",
     "\n",
     "    covariance_list.append(\n",
-    "        DataTrueVel.compute_covariance(\n",
+    "        covariance.CovMatrix.init_from_flip(\n",
     "            \"carreres23\",\n",
+    "            \"velocity\",\n",
     "            power_spectrum_dict,\n",
+    "            coordinates_velocity=coordinates_velocity,\n",
     "            size_batch=size_batch,\n",
-    "            number_worker=number_worker\n",
+    "            number_worker=number_worker,\n",
     "        )\n",
     "    )\n"
    ]
@@ -185,7 +179,7 @@
       "  warnings.warn(\n",
       "/global/homes/r/ravouxco/.local/perlmutter/python-3.11/lib/python3.11/site-packages/sklearn/gaussian_process/kernels.py:450: ConvergenceWarning: The optimal value found for dimension 0 of parameter k2__constant_value is close to the specified upper bound 100000.0. Increasing the bound and calling fit again may find a better value.\n",
       "  warnings.warn(\n",
-      "[ 000050.77 ]: 01-19 03:04  root            INFO     Covariance matrix generated from emulator with skgpmatrix model in 2.77e+01 seconds\n"
+      "[ 000041.56 ]: 01-23 03:36  root            INFO     Covariance matrix generated from emulator with skgpmatrix model in 2.21e+01 seconds\n"
      ]
     }
    ],
@@ -224,11 +218,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ 000053.09 ]: 01-19 03:04  root            INFO     ┌─────────────────────────────────────────────────────────────────────────┐\n",
+      "[ 000043.47 ]: 01-23 03:36  root            INFO     ┌─────────────────────────────────────────────────────────────────────────┐\n",
       "│                                Migrad                                   │\n",
       "├──────────────────────────────────┬──────────────────────────────────────┤\n",
       "│ FCN = 3781                       │              Nfcn = 99               │\n",
-      "│ EDM = 6.7e-05 (Goal: 0.0001)     │            time = 2.3 sec            │\n",
+      "│ EDM = 6.7e-05 (Goal: 0.0001)     │            time = 1.9 sec            │\n",
       "├──────────────────────────────────┼──────────────────────────────────────┤\n",
       "│          Valid Minimum           │   Below EDM threshold (goal x 10)    │\n",
       "├──────────────────────────────────┼──────────────────────────────────────┤\n",
